--- a/stat-tables.tex
+++ b/stat-tables.tex
@@ -62,6 +62,8 @@
 \makeatother
 
 \usepackage{hyperref}
+\usepackage{graphicx}
+\graphicspath{{stat-tables_files/figure-latex/}}
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{array}
@@ -87,6 +89,8 @@
 ~\\
 \vspace{2cm}
 {\Huge Statistical Tables}
+~\\~\\
+v0.1 (last updated: 15 Mar 2020)
 \vspace{5cm}
 \end{center}
 
