--- a/stat-tables.tex
+++ b/stat-tables.tex
@@ -168,8 +168,7 @@ curve from \(-\infty\) to \(z(\alpha)\).
 \end{table}
 
 \hypertarget{table-2-percentiles-of-the-chi2-distribution.}{%
-\subsubsection{\texorpdfstring{Table 2: Percentiles of the \(\chi^2\)
-distribution.}{Table 2: Percentiles of the \textbackslash{}chi\^{}2 distribution.}}\label{table-2-percentiles-of-the-chi2-distribution.}}
+\subsubsection{\texorpdfstring{Table 2: Percentiles of the \(\chi^2\)-distribution.}{Table 2: Percentiles of the \textbackslash{}chi\^{}2 distribution.}}\label{table-2-percentiles-of-the-chi2-distribution.}}
 
 Each table entry is \(\chi^2_k(\alpha)\), where
 \(\text{P}\big(X < \chi^2_k(\alpha)\big)=A=1-\alpha\) with
