--- a/stat-tables.tex
+++ b/stat-tables.tex
@@ -90,7 +90,7 @@
 \vspace{2cm}
 {\Huge Statistical Tables}
 ~\\~\\
-v0.1 (last updated: 15 Mar 2020)
+v0.1.1 (last updated: 16 Mar 2020)
 \vspace{5cm}
 \end{center}
 
@@ -100,7 +100,7 @@ v0.1 (last updated: 15 Mar 2020)
 \begin{center}
 Copyright (c) 2020 Haziq Jamil
 ~\\
-\href{https://github.com/haziqj/stat-tables}{\texttt{https://github.com/haziqj/stat-tables}}
+\href{https://haziqj.github.io/stat-tables}{\texttt{https://haziqj.github.io/stat-tables}}
 \end{center}
 
 \newpage
@@ -168,7 +168,8 @@ curve from \(-\infty\) to \(z(\alpha)\).
 \end{table}
 
 \hypertarget{table-2-percentiles-of-the-chi2-distribution.}{%
-\subsubsection{\texorpdfstring{Table 2: Percentiles of the \(\chi^2\)-distribution.}{Table 2: Percentiles of the \textbackslash{}chi\^{}2 distribution.}}\label{table-2-percentiles-of-the-chi2-distribution.}}
+\subsubsection{\texorpdfstring{Table 2: Percentiles of the
+\(\chi^2\)-distribution.}{Table 2: Percentiles of the \textbackslash{}chi\^{}2-distribution.}}\label{table-2-percentiles-of-the-chi2-distribution.}}
 
 Each table entry is \(\chi^2_k(\alpha)\), where
 \(\text{P}\big(X < \chi^2_k(\alpha)\big)=A=1-\alpha\) with
@@ -320,7 +321,7 @@ Each table entry is
 \midrule
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=1$}}\\
-\hspace{1em}0.5 & 1.00 & 1.50 & 1.71 & 1.82 & 1.89 & 1.94 & 1.98 & 2.00 & 2.03 & 2.04\\
+\hspace{1em}0.5 & 1.000 & 1.500 & 1.709 & 1.823 & 1.894 & 1.942 & 1.977 & 2.004 & 2.025 & 2.042\\
 \hspace{1em}0.9 & 39.9 & 49.5 & 53.6 & 55.8 & 57.2 & 58.2 & 58.9 & 59.4 & 59.9 & 60.2\\
 \hspace{1em}0.95 & 161 & 199 & 216 & 225 & 230 & 234 & 237 & 239 & 241 & 242\\
 \hspace{1em}0.975 & 648 & 799 & 864 & 900 & 922 & 937 & 948 & 957 & 963 & 969\\
@@ -329,37 +330,37 @@ Each table entry is
 \hspace{1em}0.999 & 405284 & 499999 & 540379 & 562500 & 576405 & 585937 & 592873 & 598144 & 602284 & 605621\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=2$}}\\
-\hspace{1em}0.5 & 0.67 & 1.00 & 1.13 & 1.21 & 1.25 & 1.28 & 1.30 & 1.32 & 1.33 & 1.35\\
-\hspace{1em}0.9 & 8.53 & 9.00 & 9.16 & 9.24 & 9.29 & 9.33 & 9.35 & 9.37 & 9.38 & 9.39\\
-\hspace{1em}0.95 & 18.5 & 19.0 & 19.2 & 19.2 & 19.3 & 19.3 & 19.4 & 19.4 & 19.4 & 19.4\\
-\hspace{1em}0.975 & 38.5 & 39.0 & 39.2 & 39.2 & 39.3 & 39.3 & 39.4 & 39.4 & 39.4 & 39.4\\
-\hspace{1em}0.99 & 98.5 & 99.0 & 99.2 & 99.2 & 99.3 & 99.3 & 99.4 & 99.4 & 99.4 & 99.4\\
-\hspace{1em}0.995 & 198.5 & 199.0 & 199.2 & 199.2 & 199.3 & 199.3 & 199.4 & 199.4 & 199.4 & 199.4\\
-\hspace{1em}0.999 & 998.5 & 999.0 & 999.2 & 999.2 & 999.3 & 999.3 & 999.4 & 999.4 & 999.4 & 999.4\\
+\hspace{1em}0.5 & 0.667 & 1.000 & 1.135 & 1.207 & 1.252 & 1.282 & 1.305 & 1.321 & 1.334 & 1.345\\
+\hspace{1em}0.9 & 8.526 & 9.000 & 9.162 & 9.243 & 9.293 & 9.326 & 9.349 & 9.367 & 9.381 & 9.392\\
+\hspace{1em}0.95 & 18.51 & 19.00 & 19.16 & 19.25 & 19.30 & 19.33 & 19.35 & 19.37 & 19.38 & 19.40\\
+\hspace{1em}0.975 & 38.51 & 39.00 & 39.17 & 39.25 & 39.30 & 39.33 & 39.36 & 39.37 & 39.39 & 39.40\\
+\hspace{1em}0.99 & 98.50 & 99.00 & 99.17 & 99.25 & 99.30 & 99.33 & 99.36 & 99.37 & 99.39 & 99.40\\
+\hspace{1em}0.995 & 198.50 & 199.00 & 199.17 & 199.25 & 199.30 & 199.33 & 199.36 & 199.37 & 199.39 & 199.40\\
+\hspace{1em}0.999 & 998.50 & 999.00 & 999.17 & 999.25 & 999.30 & 999.33 & 999.36 & 999.37 & 999.39 & 999.40\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=3$}}\\
-\hspace{1em}0.5 & 0.59 & 0.88 & 1.00 & 1.06 & 1.10 & 1.13 & 1.15 & 1.16 & 1.17 & 1.18\\
-\hspace{1em}0.9 & 5.54 & 5.46 & 5.39 & 5.34 & 5.31 & 5.28 & 5.27 & 5.25 & 5.24 & 5.23\\
-\hspace{1em}0.95 & 10.13 & 9.55 & 9.28 & 9.12 & 9.01 & 8.94 & 8.89 & 8.85 & 8.81 & 8.79\\
-\hspace{1em}0.975 & 17.4 & 16.0 & 15.4 & 15.1 & 14.9 & 14.7 & 14.6 & 14.5 & 14.5 & 14.4\\
-\hspace{1em}0.99 & 34.1 & 30.8 & 29.5 & 28.7 & 28.2 & 27.9 & 27.7 & 27.5 & 27.3 & 27.2\\
+\hspace{1em}0.5 & 0.585 & 0.881 & 1.000 & 1.063 & 1.102 & 1.129 & 1.148 & 1.163 & 1.174 & 1.183\\
+\hspace{1em}0.9 & 5.538 & 5.462 & 5.391 & 5.343 & 5.309 & 5.285 & 5.266 & 5.252 & 5.240 & 5.230\\
+\hspace{1em}0.95 & 10.128 & 9.552 & 9.277 & 9.117 & 9.013 & 8.941 & 8.887 & 8.845 & 8.812 & 8.786\\
+\hspace{1em}0.975 & 17.44 & 16.04 & 15.44 & 15.10 & 14.88 & 14.73 & 14.62 & 14.54 & 14.47 & 14.42\\
+\hspace{1em}0.99 & 34.12 & 30.82 & 29.46 & 28.71 & 28.24 & 27.91 & 27.67 & 27.49 & 27.35 & 27.23\\
 \hspace{1em}0.995 & 55.6 & 49.8 & 47.5 & 46.2 & 45.4 & 44.8 & 44.4 & 44.1 & 43.9 & 43.7\\
 \hspace{1em}0.999 & 167.0 & 148.5 & 141.1 & 137.1 & 134.6 & 132.8 & 131.6 & 130.6 & 129.9 & 129.2\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=4$}}\\
-\hspace{1em}0.5 & 0.55 & 0.83 & 0.94 & 1.00 & 1.04 & 1.06 & 1.08 & 1.09 & 1.10 & 1.11\\
+\hspace{1em}0.5 & 0.549 & 0.828 & 0.941 & 1.000 & 1.037 & 1.062 & 1.080 & 1.093 & 1.104 & 1.113\\
 \hspace{1em}0.9 & 4.54 & 4.32 & 4.19 & 4.11 & 4.05 & 4.01 & 3.98 & 3.95 & 3.94 & 3.92\\
-\hspace{1em}0.95 & 7.7 & 6.9 & 6.6 & 6.4 & 6.3 & 6.2 & 6.1 & 6.0 & 6.0 & 6.0\\
-\hspace{1em}0.975 & 12.2 & 10.6 & 10.0 & 9.6 & 9.4 & 9.2 & 9.1 & 9.0 & 8.9 & 8.8\\
+\hspace{1em}0.95 & 7.71 & 6.94 & 6.59 & 6.39 & 6.26 & 6.16 & 6.09 & 6.04 & 6.00 & 5.96\\
+\hspace{1em}0.975 & 12.22 & 10.65 & 9.98 & 9.60 & 9.36 & 9.20 & 9.07 & 8.98 & 8.90 & 8.84\\
 \hspace{1em}0.99 & 21.2 & 18.0 & 16.7 & 16.0 & 15.5 & 15.2 & 15.0 & 14.8 & 14.7 & 14.5\\
 \hspace{1em}0.995 & 31.3 & 26.3 & 24.3 & 23.2 & 22.5 & 22.0 & 21.6 & 21.4 & 21.1 & 21.0\\
 \hspace{1em}0.999 & 74.1 & 61.2 & 56.2 & 53.4 & 51.7 & 50.5 & 49.7 & 49.0 & 48.5 & 48.1\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=5$}}\\
-\hspace{1em}0.5 & 0.53 & 0.80 & 0.91 & 0.96 & 1.00 & 1.02 & 1.04 & 1.05 & 1.06 & 1.07\\
+\hspace{1em}0.5 & 0.528 & 0.799 & 0.907 & 0.965 & 1.000 & 1.024 & 1.041 & 1.055 & 1.065 & 1.073\\
 \hspace{1em}0.9 & 4.06 & 3.78 & 3.62 & 3.52 & 3.45 & 3.40 & 3.37 & 3.34 & 3.32 & 3.30\\
-\hspace{1em}0.95 & 6.6 & 5.8 & 5.4 & 5.2 & 5.1 & 5.0 & 4.9 & 4.8 & 4.8 & 4.7\\
-\hspace{1em}0.975 & 10.0 & 8.4 & 7.8 & 7.4 & 7.1 & 7.0 & 6.9 & 6.8 & 6.7 & 6.6\\
+\hspace{1em}0.95 & 6.61 & 5.79 & 5.41 & 5.19 & 5.05 & 4.95 & 4.88 & 4.82 & 4.77 & 4.74\\
+\hspace{1em}0.975 & 10.01 & 8.43 & 7.76 & 7.39 & 7.15 & 6.98 & 6.85 & 6.76 & 6.68 & 6.62\\
 \hspace{1em}0.99 & 16.3 & 13.3 & 12.1 & 11.4 & 11.0 & 10.7 & 10.5 & 10.3 & 10.2 & 10.1\\
 \hspace{1em}0.995 & 22.8 & 18.3 & 16.5 & 15.6 & 14.9 & 14.5 & 14.2 & 14.0 & 13.8 & 13.6\\
 \hspace{1em}0.999 & 47.2 & 37.1 & 33.2 & 31.1 & 29.8 & 28.8 & 28.2 & 27.6 & 27.2 & 26.9\\
@@ -390,37 +391,37 @@ Each table entry is
 \hspace{1em}0.999 & 608368 & 610668 & 612622 & 614303 & 615764 & 620908 & 626099 & 631337 & 633972 & 636619\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=2$}}\\
-\hspace{1em}0.5 & 1.35 & 1.36 & 1.37 & 1.37 & 1.38 & 1.39 & 1.41 & 1.43 & 1.43 & 1.44\\
-\hspace{1em}0.9 & 9.40 & 9.41 & 9.41 & 9.42 & 9.42 & 9.44 & 9.46 & 9.47 & 9.48 & 9.49\\
-\hspace{1em}0.95 & 19.4 & 19.4 & 19.4 & 19.4 & 19.4 & 19.4 & 19.5 & 19.5 & 19.5 & 19.5\\
-\hspace{1em}0.975 & 39.4 & 39.4 & 39.4 & 39.4 & 39.4 & 39.4 & 39.5 & 39.5 & 39.5 & 39.5\\
-\hspace{1em}0.99 & 99.4 & 99.4 & 99.4 & 99.4 & 99.4 & 99.4 & 99.5 & 99.5 & 99.5 & 99.5\\
-\hspace{1em}0.995 & 199.4 & 199.4 & 199.4 & 199.4 & 199.4 & 199.4 & 199.5 & 199.5 & 199.5 & 199.5\\
-\hspace{1em}0.999 & 999.4 & 999.4 & 999.4 & 999.4 & 999.4 & 999.4 & 999.5 & 999.5 & 999.5 & 999.5\\
+\hspace{1em}0.5 & 1.354 & 1.361 & 1.367 & 1.372 & 1.377 & 1.393 & 1.410 & 1.426 & 1.434 & 1.443\\
+\hspace{1em}0.9 & 9.401 & 9.408 & 9.415 & 9.420 & 9.425 & 9.441 & 9.458 & 9.475 & 9.483 & 9.491\\
+\hspace{1em}0.95 & 19.40 & 19.41 & 19.42 & 19.42 & 19.43 & 19.45 & 19.46 & 19.48 & 19.49 & 19.50\\
+\hspace{1em}0.975 & 39.41 & 39.41 & 39.42 & 39.43 & 39.43 & 39.45 & 39.46 & 39.48 & 39.49 & 39.50\\
+\hspace{1em}0.99 & 99.41 & 99.42 & 99.42 & 99.43 & 99.43 & 99.45 & 99.47 & 99.48 & 99.49 & 99.50\\
+\hspace{1em}0.995 & 199.41 & 199.42 & 199.42 & 199.43 & 199.43 & 199.45 & 199.47 & 199.48 & 199.49 & 199.50\\
+\hspace{1em}0.999 & 999.41 & 999.42 & 999.42 & 999.43 & 999.43 & 999.45 & 999.47 & 999.48 & 999.49 & 999.50\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=3$}}\\
-\hspace{1em}0.5 & 1.19 & 1.20 & 1.20 & 1.21 & 1.21 & 1.23 & 1.24 & 1.25 & 1.26 & 1.27\\
-\hspace{1em}0.9 & 5.22 & 5.22 & 5.21 & 5.20 & 5.20 & 5.18 & 5.17 & 5.15 & 5.14 & 5.13\\
-\hspace{1em}0.95 & 8.76 & 8.74 & 8.73 & 8.71 & 8.70 & 8.66 & 8.62 & 8.57 & 8.55 & 8.53\\
-\hspace{1em}0.975 & 14.4 & 14.3 & 14.3 & 14.3 & 14.3 & 14.2 & 14.1 & 14.0 & 13.9 & 13.9\\
-\hspace{1em}0.99 & 27.1 & 27.1 & 27.0 & 26.9 & 26.9 & 26.7 & 26.5 & 26.3 & 26.2 & 26.1\\
+\hspace{1em}0.5 & 1.191 & 1.197 & 1.203 & 1.207 & 1.211 & 1.225 & 1.239 & 1.254 & 1.261 & 1.268\\
+\hspace{1em}0.9 & 5.222 & 5.216 & 5.210 & 5.205 & 5.200 & 5.184 & 5.168 & 5.151 & 5.143 & 5.134\\
+\hspace{1em}0.95 & 8.763 & 8.745 & 8.729 & 8.715 & 8.703 & 8.660 & 8.617 & 8.572 & 8.549 & 8.526\\
+\hspace{1em}0.975 & 14.37 & 14.34 & 14.30 & 14.28 & 14.25 & 14.17 & 14.08 & 13.99 & 13.95 & 13.90\\
+\hspace{1em}0.99 & 27.13 & 27.05 & 26.98 & 26.92 & 26.87 & 26.69 & 26.50 & 26.32 & 26.22 & 26.13\\
 \hspace{1em}0.995 & 43.5 & 43.4 & 43.3 & 43.2 & 43.1 & 42.8 & 42.5 & 42.1 & 42.0 & 41.8\\
 \hspace{1em}0.999 & 128.7 & 128.3 & 128.0 & 127.6 & 127.4 & 126.4 & 125.4 & 124.5 & 124.0 & 123.5\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=4$}}\\
-\hspace{1em}0.5 & 1.12 & 1.13 & 1.13 & 1.13 & 1.14 & 1.15 & 1.16 & 1.18 & 1.18 & 1.19\\
+\hspace{1em}0.5 & 1.120 & 1.126 & 1.131 & 1.135 & 1.139 & 1.152 & 1.165 & 1.178 & 1.185 & 1.192\\
 \hspace{1em}0.9 & 3.91 & 3.90 & 3.89 & 3.88 & 3.87 & 3.84 & 3.82 & 3.79 & 3.78 & 3.76\\
-\hspace{1em}0.95 & 5.9 & 5.9 & 5.9 & 5.9 & 5.9 & 5.8 & 5.7 & 5.7 & 5.7 & 5.6\\
-\hspace{1em}0.975 & 8.8 & 8.8 & 8.7 & 8.7 & 8.7 & 8.6 & 8.5 & 8.4 & 8.3 & 8.3\\
+\hspace{1em}0.95 & 5.94 & 5.91 & 5.89 & 5.87 & 5.86 & 5.80 & 5.75 & 5.69 & 5.66 & 5.63\\
+\hspace{1em}0.975 & 8.79 & 8.75 & 8.71 & 8.68 & 8.66 & 8.56 & 8.46 & 8.36 & 8.31 & 8.26\\
 \hspace{1em}0.99 & 14.5 & 14.4 & 14.3 & 14.2 & 14.2 & 14.0 & 13.8 & 13.7 & 13.6 & 13.5\\
 \hspace{1em}0.995 & 20.8 & 20.7 & 20.6 & 20.5 & 20.4 & 20.2 & 19.9 & 19.6 & 19.5 & 19.3\\
 \hspace{1em}0.999 & 47.7 & 47.4 & 47.2 & 46.9 & 46.8 & 46.1 & 45.4 & 44.7 & 44.4 & 44.1\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{$k_2=5$}}\\
-\hspace{1em}0.5 & 1.08 & 1.09 & 1.09 & 1.09 & 1.10 & 1.11 & 1.12 & 1.14 & 1.14 & 1.15\\
+\hspace{1em}0.5 & 1.080 & 1.085 & 1.090 & 1.094 & 1.098 & 1.111 & 1.123 & 1.136 & 1.143 & 1.149\\
 \hspace{1em}0.9 & 3.28 & 3.27 & 3.26 & 3.25 & 3.24 & 3.21 & 3.17 & 3.14 & 3.12 & 3.10\\
-\hspace{1em}0.95 & 4.7 & 4.7 & 4.7 & 4.6 & 4.6 & 4.6 & 4.5 & 4.4 & 4.4 & 4.4\\
-\hspace{1em}0.975 & 6.6 & 6.5 & 6.5 & 6.5 & 6.4 & 6.3 & 6.2 & 6.1 & 6.1 & 6.0\\
+\hspace{1em}0.95 & 4.70 & 4.68 & 4.66 & 4.64 & 4.62 & 4.56 & 4.50 & 4.43 & 4.40 & 4.36\\
+\hspace{1em}0.975 & 6.57 & 6.52 & 6.49 & 6.46 & 6.43 & 6.33 & 6.23 & 6.12 & 6.07 & 6.02\\
 \hspace{1em}0.99 & 10.0 & 9.9 & 9.8 & 9.8 & 9.7 & 9.6 & 9.4 & 9.2 & 9.1 & 9.0\\
 \hspace{1em}0.995 & 13.5 & 13.4 & 13.3 & 13.2 & 13.1 & 12.9 & 12.7 & 12.4 & 12.3 & 12.1\\
 \hspace{1em}0.999 & 26.6 & 26.4 & 26.2 & 26.1 & 25.9 & 25.4 & 24.9 & 24.3 & 24.1 & 23.8\\
@@ -783,13 +784,13 @@ Each table entry is
 \hspace{1em}0.999 & 3.12 & 3.02 & 2.93 & 2.85 & 2.78 & 2.53 & 2.26 & 1.95 & 1.77 & 1.54\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{$k_2=\infty$}\\
-\hspace{1em}0.5 & 0.940 & 0.945 & 0.949 & 0.953 & 0.956 & 0.967 & 0.978 & 0.989 & 0.994 & 1.000\\
-\hspace{1em}0.9 & 1.570 & 1.546 & 1.524 & 1.505 & 1.487 & 1.421 & 1.342 & 1.240 & 1.169 & 1.000\\
-\hspace{1em}0.95 & 1.79 & 1.75 & 1.72 & 1.69 & 1.67 & 1.57 & 1.46 & 1.32 & 1.22 & 1.00\\
-\hspace{1em}0.975 & 1.99 & 1.94 & 1.90 & 1.87 & 1.83 & 1.71 & 1.57 & 1.39 & 1.27 & 1.00\\
-\hspace{1em}0.99 & 2.25 & 2.18 & 2.13 & 2.08 & 2.04 & 1.88 & 1.70 & 1.47 & 1.32 & 1.00\\
-\hspace{1em}0.995 & 2.43 & 2.36 & 2.29 & 2.24 & 2.19 & 2.00 & 1.79 & 1.53 & 1.36 & 1.00\\
-\hspace{1em}0.999 & 2.84 & 2.74 & 2.66 & 2.58 & 2.51 & 2.27 & 1.99 & 1.66 & 1.45 & 1.00\\
+\hspace{1em}0.5 & 0.9401 & 0.9450 & 0.9492 & 0.9528 & 0.9559 & 0.9669 & 0.9779 & 0.9889 & 0.9944 & 1.0000\\
+\hspace{1em}0.9 & 1.5705 & 1.5458 & 1.5240 & 1.5046 & 1.4871 & 1.4206 & 1.3419 & 1.2400 & 1.1686 & 1.0000\\
+\hspace{1em}0.95 & 1.7886 & 1.7522 & 1.7202 & 1.6918 & 1.6664 & 1.5705 & 1.4591 & 1.3180 & 1.2214 & 1.0000\\
+\hspace{1em}0.975 & 1.9927 & 1.9447 & 1.9027 & 1.8656 & 1.8326 & 1.7085 & 1.5660 & 1.3883 & 1.2684 & 1.0000\\
+\hspace{1em}0.99 & 2.2477 & 2.1847 & 2.1299 & 2.0815 & 2.0385 & 1.8783 & 1.6964 & 1.4730 & 1.3246 & 1.0000\\
+\hspace{1em}0.995 & 2.4324 & 2.3583 & 2.2938 & 2.2371 & 2.1868 & 1.9998 & 1.7891 & 1.5325 & 1.3637 & 1.0000\\
+\hspace{1em}0.999 & 2.8422 & 2.7425 & 2.6560 & 2.5802 & 2.5132 & 2.2657 & 1.9901 & 1.6601 & 1.4468 & 1.0000\\
 \bottomrule
 \end{tabular}
 \end{table}
